# Kogniq

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  WORKSPACE.md  alembic.ini  conftest.py  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml
.ai/: api_catalog.md  architecture_decision_flow.md  coding_rules.md  contributing.md  data_dictionary.md  decisions.md  design.md  frontend-constitution.md  glossary.md  handoff.md  package_contracts.md  pipeline_catalog.md  product_requirements.md  progress.md  roadmap.md  service_catalog.md  session_template.md  system_blueprint.md  system_constraints.md  techstack.md
.ai/prompts/: README.md
.github/: README.md
apps/: README.md
apps/api/: README.md  pyproject.toml
apps/api/src/apps/: __init__.py
apps/api/src/apps/api/: __init__.py
apps/api/src/apps/api/app/: __init__.py  main.py
apps/api/src/apps/api/app/api/: __init__.py  router.py
apps/api/src/apps/api/app/config/: __init__.py  settings.py
apps/api/src/apps/api/app/core/: __init__.py  errors.py  lifecycle.py  metadata.py
apps/api/src/apps/api/app/core/auth/: __init__.py  cookie.py
apps/api/src/apps/api/app/db/: __init__.py  base.py  engine.py  health.py  session.py  unit_of_work.py
apps/api/src/apps/api/app/db/migrations/: env.py
apps/api/src/apps/api/app/db/migrations/versions/: c3ad36bb186f_initial_infrastructure_models.py
apps/api/src/apps/api/app/db/repositories/: __init__.py  base.py
apps/api/src/apps/api/app/dependencies/: __init__.py  auth.py  request.py
apps/api/src/apps/api/app/middleware/: __init__.py  exceptions.py  request_id.py  timing.py
apps/api/src/apps/api/app/routers/: __init__.py  auth.py  documents.py  health.py  version.py
apps/api/src/apps/api/app/schemas/: __init__.py  auth.py  errors.py  system.py
apps/api/tests/: __init__.py  conftest.py  test_application.py  test_auth.py  test_db.py  test_documents.py  test_health.py  test_version.py
apps/web/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/docs/: DESIGN_SYSTEM.md
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/system/: page.tsx
apps/web/src/app/workspace/: WorkspaceContext.tsx  WorkspaceEngine.tsx  WorkspaceMotion.ts  WorkspaceProvider.tsx  WorkspaceTransitions.tsx  WorkspaceTypes.ts  workspace-engine.test.tsx
apps/web/src/components/documents/: DocumentCollection.tsx  DocumentEmptyState.tsx  DocumentItem.tsx  DocumentLifecycle.tsx  DocumentMetadata.tsx  DocumentSurface.tsx  index.ts  useDocumentUpload.ts
apps/web/src/components/experience/: experience-flow.tsx  footer.tsx  locus.tsx
apps/web/src/components/knowledge/: KnowledgeEmptyState.tsx  KnowledgeInspector.tsx  KnowledgeMap.tsx  KnowledgeNode.tsx  KnowledgeRelationship.tsx  KnowledgeSurface.tsx  KnowledgeTrail.tsx  index.ts
apps/web/src/components/locus/: Locus.tsx  LocusAnimation.ts  LocusContext.tsx  LocusInput.tsx  LocusPlaceholder.tsx  index.ts
apps/web/src/components/notebook/: NotebookAnnotation.tsx  NotebookCanvas.tsx  NotebookCollection.tsx  NotebookConnection.tsx  NotebookEmptyState.tsx  NotebookEntry.tsx  NotebookNarrative.tsx  NotebookSurface.tsx  NotebookThought.tsx  index.ts
apps/web/src/components/search/: SearchEmptyState.tsx  SearchEvidence.tsx  SearchFilters.tsx  SearchFindingItem.tsx  index.ts  (+4 more)
data/: demo_kogniq.db  kogniq.db
data/chroma/: chroma.sqlite3
datasets/: README.md
dev/: check_key.py  demo_application_layer.py  demo_auth.py  demo_authorization.py  demo_chroma_store.py  demo_chunk_model.py  demo_document_api.py  demo_docx_processor.py  demo_embedding_domain.py  demo_embedding_registry.py  demo_explanation_generator.py  demo_fixed_chunking.py  demo_flashcards_generator.py  demo_gemini_extractor.py  demo_generation_framework.py  demo_html_processor.py  demo_hybrid_chunk_engine.py  demo_jobs.py  demo_knowledge_domain.py  demo_knowledge_registry.py  demo_learning_api.py  demo_learning_content.py  demo_local_embeddings.py  demo_markdown_processor.py  demo_notes_generator.py  demo_openrouter_extractor.py  demo_openrouter_provider.py  demo_pdf_processor.py  demo_persistence.py  demo_pipeline.py  demo_qdrant.py  demo_quiz_generator.py  demo_registry.py  demo_retrieval_api.py  demo_retriever.py  demo_sqlite_persistence.py  demo_structural_chunking.py  demo_study_guide.py  demo_summary_generator.py  demo_summary_openrouter.py  (+3 more)
dev/sample_documents/: README.md
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  development.md
docs/architecture/: README.md  agents.md  application-layer.md  auth-domain.md  authorization.md  backend-foundation.md  backend.md  background-processing.md  chroma-vector-store.md  chunk-model.md  content-domain.md  deployment.md  document-intelligence-pipeline.md  document-processing-api.md  docx-processor.md  education-layer.md  embedding-domain.md  embedding-provider.md  evaluation.md  explanation-generator.md  fixed-size-chunking.md  flashcards-generator.md  frontend.md  gemini-knowledge-extractor.md  html-processor.md  hybrid-chunk-engine.md  knowledge-domain.md  knowledge-extractors.md  learning-content-domain.md  learning-generation-api.md  learning-generation-framework.md  local-embedding-provider.md  markdown-processor.md  ml.md  normalized-document.md  notes-generator.md  openrouter-provider.md  pdf-processor.md  plugin-system.md  processor-registry.md  (+14 more)
docs/frontend/: document-workspace.md  knowledge-workspace.md  notebook-workspace.md  search-workspace.md  study-workspace.md  workspace-engine.md  workspace-integration.md
experiments/: README.md
infrastructure/: README.md  health_verification.md
scratch/: mocks_search.txt  verify_sqlite.py
scripts/: README.md  logs.bat  logs.sh  reset-dev.bat  reset-dev.sh  start-dev.bat  start-dev.sh  status.bat  status.sh  stop-dev.bat  stop-dev.sh
scripts/deployment/: README.md
scripts/development/: README.md
scripts/evaluation/: README.md
scripts/maintenance/: README.md
tests/: README.md
(+90 files in other folders)
