[project]
name = "kogniq-api"
version = "0.1.0"
description = "Kogniq application API foundation"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Yash Mishra" }]
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.116,<1",
    "kogniq-shared",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.35,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apps"]

[tool.uv.sources]
kogniq-shared = { workspace = true }
